Update workspace metadata, add Infrared sensor implementation, and modify Ultrasonic sensor logic

--- a/ECED4402_2022-L4_SensorController/ECED4402_2022.ioc
+++ b/ECED4402_2022-L4_SensorController/ECED4402_2022.ioc
@@ -15,9 +15,10 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IP5=USART6
-Mcu.IPNb=6
+Mcu.IP4=TIM2
+Mcu.IP5=USART2
+Mcu.IP6=USART6
+Mcu.IPNb=7
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -30,6 +31,7 @@ Mcu.Pin14=PA14
 Mcu.Pin15=PB3
 Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin17=VP_SYS_VS_tim9
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -38,7 +40,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -58,14 +60,15 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.TIM1_BRK_TIM9_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM2_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_BRK_TIM9_IRQn
 NVIC.TimeBaseIP=TIM9
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 PA1.GPIOParameters=GPIO_Speed,GPIO_Label
-PA1.GPIO_Label=Ultrasonic_Trigger
-PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA1.GPIO_Label=TRIG
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
@@ -94,7 +97,7 @@ PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=UltrasonicEcho
+PA6.GPIO_Label=ECHO
 PA6.Locked=true
 PA6.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_Label
@@ -192,6 +195,9 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=65535
+TIM2.Prescaler=83
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
@@ -200,6 +206,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim9.Mode=TIM9
 VP_SYS_VS_tim9.Signal=SYS_VS_tim9
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 rtos.0.ip=FREERTOS
