--- a/ECED4402_2022-L4_SensorController/ECED4402_2022.ioc
+++ b/ECED4402_2022-L4_SensorController/ECED4402_2022.ioc
@@ -16,9 +16,10 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
-Mcu.IP5=USART2
-Mcu.IP6=USART6
-Mcu.IPNb=7
+Mcu.IP5=TIM3
+Mcu.IP6=USART2
+Mcu.IP7=USART6
+Mcu.IPNb=8
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -32,6 +33,7 @@ Mcu.Pin15=PB3
 Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin17=VP_SYS_VS_tim9
 Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -40,7 +42,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -61,6 +63,7 @@ NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.TIM1_BRK_TIM9_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TIM2_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_BRK_TIM9_IRQn
 NVIC.TimeBaseIP=TIM9
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -100,10 +103,8 @@ PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ECHO
 PA6.Locked=true
 PA6.Signal=GPIO_Input
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=IR_Receiver
 PA7.Locked=true
-PA7.Signal=GPIO_Input
+PA7.Signal=S_TIM3_CH2
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -160,7 +161,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_USART6_UART_Init-USART6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_USART6_UART_Init-USART6-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -195,9 +196,14 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Input_Capture2_from_TI2
+SH.S_TIM3_CH2.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=65535
 TIM2.Prescaler=83
+TIM3.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
+TIM3.IPParameters=Prescaler,Channel-Input_Capture2_from_TI2
+TIM3.Prescaler=83
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
@@ -208,6 +214,8 @@ VP_SYS_VS_tim9.Mode=TIM9
 VP_SYS_VS_tim9.Signal=SYS_VS_tim9
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 rtos.0.ip=FREERTOS
